# DroneController

./: .gitignore  CMakeLists.txt  DronePositional.drawio  DroneSchematic.drawio  Makefile
AttitudeEstimator/: AttitudeEstimator.ino  IMU.cpp  MahonyAHRS.cpp  MahonyAHRS.h  NanoUnoIF.h
Controller/: CMakeLists.txt
Controller/modules/app/: app.cpp  app.h
Controller/modules/gui/: DroneControllerWindow.cpp  DroneControllerWindow.h
Controller/modules/gui/widgets/: DroneFrame.cpp  DroneFrame.h  Frame.cpp  Frame.h  JoystickFrame.cpp  Menu.cpp  Menu.h
Controller/modules/joystick/: joystick.cpp  joystick.h
Controller/modules/radio/: radio.cpp  radio.h
Controller/modules/settings/: DefaultSettings.xml  DefaultSettingsCentos.xml
EscCalib/: EscCalib.ino
FlightController/: Adafruit_LSM9DS1.cpp  Adafruit_LSM9DS1.h  FlightController.ino  IMU.cpp  IMU.h  MAINT.cpp  MAINT.h  MadgwickAHRS.cpp  MadgwickAHRS.h  MahonyAHRS.cpp  MahonyAHRS.h  PID..cpp  PID.cpp  PID.h  Utils.cpp  Utils.h  link_utili.txt
LogFlights/: 08-04-2023-03-31.csv  19-03-2023-21-23.csv  19-03-2023-23-12.csv  28-03-2023-02-49.csv  reader.m
MaintDRONE/: CMakeLists.txt  CompassWidget.cpp  CompassWidget.h  HorizonWidget.cpp  HorizonWidget.h  MaintDRONE.ui  PlotWidget.cpp  PlotWidget.h  main.cpp
firmware/DroneFirmware/EscCalib/: EscCalib.ino
firmware/DroneFirmware/FlightController/: FlightController.ino  IMU.cpp  IMU.h  UltraSonic.cpp  UltraSonic.h  attitude_estimator.cpp  attitude_estimator.h  link_utile.txt  proto.h
firmware/RadioFirmware/: RadioFirmware.ino  proto.h
firmware/RadioFirmware_ok_radio/: proto.h
firmware/SensorsFirmware/: SensorsFirmware.ino  altitude_estimator.cpp  altitude_estimator.h  attitude_estimator.cpp  proto.h
modules/app/: app.cpp
modules/gui/: DroneControllerWindow.cpp  DroneControllerWindow.h
modules/gui/widgets/: ControllerFrame.cpp  ControllerFrame.h  ControllerMenu.cpp  ControllerMenu.h  DroneFrame.cpp  JoystickFrame.cpp  JoystickFrame.h
modules/joystick/: joystick.cpp  joystick.h  joystick.h.autosave
modules/radio/: proto.h  radio.cpp  radio.h
modules/settings/: DefaultSettings.xml  rapidxml_print.hpp  settings.cpp  settings.h
